Town and Overworld building
-Town scene now serves a purpose(?)
-Added Overworld
-Hero movement in town/Overworld complete
-Added encounter areas to Overworld
-Added persistant game manager for holding area values/party/inventory/etc
-Added placeholder music
-Added a sweet new bug where the hero can only exist underground when in town

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -63,9 +63,12 @@
      <Compile Include="Assets\Scripts\BaseClass\BaseClass.cs" />
      <Compile Include="Assets\Scripts\BaseClass\BaseEnemy.cs" />
      <Compile Include="Assets\Scripts\BaseClass\BaseHero.cs" />
+     <Compile Include="Assets\Scripts\CollisionHandler.cs" />
+     <Compile Include="Assets\Scripts\GameManager.cs" />
      <Compile Include="Assets\Scripts\GUI\EnemySelectButton.cs" />
      <Compile Include="Assets\Scripts\GUI\HeroPanelStats.cs" />
      <Compile Include="Assets\Scripts\HandleTurns.cs" />
+     <Compile Include="Assets\Scripts\HeroMovement.cs" />
      <Compile Include="Assets\Scripts\StateMachines\BattleStateMachine.cs" />
      <Compile Include="Assets\Scripts\StateMachines\EnemyStateMachine.cs" />
      <Compile Include="Assets\Scripts\StateMachines\HeroStateMachine.cs" />
